--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -6,7 +6,7 @@
 }
 
 .NavigationItem a {
-    color: #8F5C2C;
+    color: #812413;
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
@@ -17,7 +17,7 @@
 .NavigationItem a:active,
 .NavigationItem a.active {
 
-    color: #40A4C8;
+    color: #005675;
 }
 
 @media (min-width: 500px) {
@@ -39,7 +39,7 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-    background-color: #8F5C2C;
+    background-color: #5e2e02;
     border-bottom: 4px solid #40A4C8;
     color: white;
 }
