--- a/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
+++ b/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
@@ -2,31 +2,32 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 5px 0;
+    margin: 10px 0;
+    box-shadow: 0 2px 1px rgb(172, 165, 165);
+    background-color: white;
 }
 
 .BuildControl button {
     display: block;
     font: inherit;
-    padding: 5px;
-    margin: 0 5px;
-    width: 80px; 
-    border: 1px solid #AA6817;
+    padding: 10px;
+    margin: 10px;
+    width: 90px; 
+    border: 1px solid #000000;
     cursor: pointer;
     outline: none;
 }
 
 .BuildControl button:disabled {
-    background-color: #AC9980;
+    background-color: #ffffff;
     border: 1px solid #7E7365;
     color: #ccc;
     cursor: default;
 }
 
 .BuildControl button:hover:disabled {
-    background-color: #AC9980;
-    color: #ccc;
     cursor: not-allowed;
+    color: #ccc;
 }
 
 .Label {
@@ -36,21 +37,29 @@
 }
 
 .BuildControl .Less {  
-    background-color: #D39952;
-    color: white;
+   border-radius: 12px;
+    color: rgb(150, 13, 13);
+    background-color: white;
+     transition: all .5s ease-in-out;
 }
 
 .BuildControl .More {
-    background-color: #8F5E1E;
-    color: white;
+    border-radius: 12px;
+    color: rgb(9, 39, 9);
+    background-color: white;
+    transition: all .2s ease-in-out;
 }
 
 .BuildControl .Less:hover, .BuildControl .Less:active {  
-    background-color: #DAA972;
-    color: white;
+   background-color: white;
+    color: rgb(150, 13, 13);
+    box-shadow: 2px 2px 10px #666666;
+    transform: scaleX(2px);
 }
 
 .BuildControl .More:hover,.BuildControl .More:active {
-    background-color: #99703F;
-    color: white;
+    background-color: white;
+    color: #115726;
+    box-shadow: 2px 2px 10px #666666;
+    transform: scaleX(2px);
 }
