--- a/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/src/components/Burger/BuildControls/BuildControls.module.css
@@ -1,6 +1,6 @@
 .BuildControls {
 	width: 100%;
-    background-color: #cf8f2e;
+    background-color: whitesmoke;
     display:flex;
     flex-flow: column;
     align-items: center;
@@ -10,22 +10,25 @@
 }
 
 .OrderButton {
-    background-color: #DAD735;
+    background-color: #22201d;
     outline: none;
     cursor: pointer;
-    border: 1px solid #966909;
-    color: #966909;
+    border: 1px solid #1302aa;
+    color: white;
     font-family: inherit;
     font-size: 1.2em;
     padding: 15px 30px;
-    box-shadow: 2px 2px 2px #966909;
+    transition: all .2s ease-in-out;
     margin: 30px;
+    border-radius: 15px;
 }
 
 .OrderButton:hover, .OrderButton:active {
-    background-color: #A0DB41;
-    border: 1px solid #966909;
-    color: #966909;
+    background-color: #312e2a;
+    border: 1px solid white;
+    box-shadow: 2px 4px 20px #35260a;
+    transform: scaleX(20px);
+   
 }
 
 .OrderButton:disabled {
