--- a/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/src/components/Burger/BuildControls/BuildControls.module.css
@@ -4,11 +4,18 @@
     display:flex;
     flex-flow: column;
     align-items: center;
-    box-shadow: 0 2px 1px #ccc;
+    /* box-shadow: 0 2px 1px #ccc; */
     margin: auto;
     padding: 10px 0;
+    box-shadow: 2px 2px 10px #666666;
 }
 
+.BuildControlContainer {
+    border: 1px solid grey;
+    padding: 20px;
+    box-shadow: 2px 2px 10px #666666;
+    border-radius: 8px;
+}
 .OrderButton {
     background-color: #22201d;
     outline: none;
